--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1"
+    "react-redux": "^5.0.1",
+    "socket.io-client": "^1.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
