--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "babel-register": "^6.18.0",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
+    "mongoose": "^4.7.6",
     "redux": "^3.6.0",
     "socket.io": "^1.7.2"
   },
