--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "build-copy": "react-scripts build && cp -r ./build/* ../server/public"
   }
 }
