--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "start": "babel-node src/server.js",
+    "start": "npm run babel-node -- src/server.js",
     "dev": "nodemon --exec npm run babel-node -- src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "babel-node": "babel-node --presets=es2015"
+    "babel-node": "babel-node --presets=es2015",
+    "forever": "forever start index.js"
   },
   "keywords": [],
   "author": "",
