--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
+    "react-router": "^3.0.1",
     "socket.io-client": "^1.7.2"
   },
   "scripts": {
